// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering should render AddToCartComponent the component 1`] = `
<div>
  <h2
    className="text-center"
  >
    Add this food item to existing Cart
  </h2>
  <div
    className="content-div"
  >
    <div
      className="item-title"
    >
      <span
        className="badge price"
      >
        ₦
      </span>
    </div>
    <div
      className="item-description"
    >
      <p />
    </div>
  </div>
  <button
    className="btn btn-blue btn-block btn-rounded btn-bg"
    onClick={[Function]}
    type="button"
  >
    Add To Cart
  </button>
  <button
    className="close-button btn btn-primary btn-block btn-rounded btn-bg"
    onClick={[MockFunction]}
    type="button"
  >
    Cancel
  </button>
</div>
`;

exports[`should render ModalTypes correctly 1`] = `
<div>
  <h2
    className="text-center"
  >
    Add this food item to existing Cart
  </h2>
  <div
    className="content-div"
  >
    <div
      className="item-title"
    >
      <span
        className="badge price"
      >
        ₦
      </span>
    </div>
    <div
      className="item-description"
    >
      <p />
    </div>
  </div>
  <button
    className="btn btn-blue btn-block btn-rounded btn-bg"
    onClick={[Function]}
    type="button"
  >
    Add To Cart
  </button>
  <button
    className="close-button btn btn-primary btn-block btn-rounded btn-bg"
    type="button"
  >
    Cancel
  </button>
</div>
`;

exports[`should render ModalTypes correctly 2`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;
